--- a/html_element/index.html
+++ b/html_element/index.html
@@ -6,11 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Html element</title>
     <link rel="stylesheet" href="style.css">
+    <script src="knapp.js"></script>
 </head>
 
 <body>
     <!--I body skriver man de som ska synas på webbsidan-->
-    <div>
+<!--använder id för css-->
+    <div id="mindiv">
         <h2>Några Html element</h2>
         <p>Testar en tabell</p>
         <table>
@@ -34,9 +36,23 @@
 
         </table>
         <h4>rottweiler</h4>
+        <!--Här använder vi class för css-->
         <img class="hundar" src="bilder/rottis.jpg" alt="">
         <h4>chihuahua</h4>
         <img class="hundar" src="bilder/Chihuahua.jpg" alt="">
+
+<h4>Favorit filmer</h4>
+        <ol>
+<li>Grown ups</li>
+<li>White chicks</li>
+<li>Barbie</li>
+
+
+</ol>
+
+<!--de här är ett button element-->
+<hr>
+<button onclick="knappTryck()">Tryck på mig!</button>
 
     </div>
 
