Halvt klar med historian

--- a/webbhistoria/historia.html
+++ b/webbhistoria/historia.html
@@ -7,7 +7,17 @@
     <link rel="stylesheet" href="historia.css">
 </head>
 <body>
-    <h3>Webb historia</h3>
+    <h2>Webb historia</h2>
+    <br>
+    <h3>World Wide Web</h3>
+    <p>Webben uppfanns i slutet av 1990 och år 1991 blev det tillgängligt för allmänheten.Den första webbsidan var en sida som heter info.cern.ch. Det var byggt för företaget CERN. Webbläsaren kom år 1993, och det hade namnet Mosaic.
+    </p>
+    <h3>Tim Berners-Lee</h3>
+    <img src="https://static.standard.co.uk/s3fs-public/thumbnails/image/2018/03/12/08/12-03-sir-tim-berners-lee.jpg?width=1200&height=1200&fit=crop" alt="En bild på Tim" style="width: 200px;height: 200px;">
+    <p>Tim Berners-Lee skapade och utvecklade World Wide Web. Han är en brittisk vetenskapsman som tog en kandidatexamen i fysik och sedan började med programmering. Idén av World Wide Web utvecklades under tiden då han arbetade på företaget CERN. Det var på en NeXT dator på CERN som han körde den första webbläsaren och webbservern 1990. 
+    </p>
+    <h3>Hur skapades webben?</h3>
+<p>Webben skapades genom hypertextdokument som hade bilder, hyperlänkar, information och mer. Det publicerades på internet så att flera olika datorsystem kunde ha tillgång till samma saker på ett enklare och smidigare sätt.</p>
     
 </body>
 </html>
