--- a/index.htm
+++ b/index.htm
@@ -11,6 +11,8 @@
     <a href="webbhistoria/historia.html" target="_blank" rel="noopener noreferrer">Om Webbens historia</a>
     <br>
     <a href="gammalsida/index.html" target="_parent" rel="noopener noreferrer">Länk till gammal sida</a>
+    <br>
+    <a href="Grid/grid.html" target="_parent" rel="noopener noreferrer">En Grid om söta hundar</a>
     <h3>Om mig:</h3>
     <img class="Hobby" src="" alt="">
     
