--- a/Main/index.html
+++ b/Main/index.html
@@ -35,8 +35,24 @@ a:visited {
   color: rgb(131, 131, 131);
   background-color: transparent;
   text-decoration: none;
+  border-top: .1em solid rgb(131, 131, 131);
 }
-
+.bio{
+  position: absolute;
+  top: 25%;
+  left: 42%;
+  display: grid;
+  grid-template-columns: auto auto auto;
+ 
+  padding: 10px;
+}
+.grid-item {
+  
+  border: 4px solid cornsilk;
+  padding: 20px;
+  font-size: 25px;
+  
+}
     </style>
       
 </head>
@@ -52,6 +68,11 @@ a:visited {
 </article>
    
 </div> 
+<div class="bio">
+  <div class="grid-item"><a href="bio/bio.html" target="_parent" rel="noopener noreferrer">Bio</a></div>
+  <div class="grid-item">hej</div>
+  <div class="grid-item">hej</div>
+</div>
 
 
 
