--- a/Main/index.html
+++ b/Main/index.html
@@ -70,7 +70,7 @@ a:visited {
 </div> 
 <div class="bio">
   <div class="grid-item"><a href="bio/bio.html" target="_parent" rel="noopener noreferrer">Bio</a></div>
-  <div class="grid-item">hej</div>
+  <div class="grid-item"><a href="Spel/spel.html" target="_parent" rel="noopener noreferrer">Spel</a></div>
   <div class="grid-item">hej</div>
 </div>
 
