--- a/ReceptSida/pannkaka.html
+++ b/ReceptSida/pannkaka.html
@@ -7,6 +7,38 @@
     <link rel="stylesheet" href="pannkaka.css">
 </head>
 <body>
-    
+    <div class="ett">
+<h1>Pannkaka</h1>
+
+
+
+    </div>
+<div>
+<h2>Ingredienser</h2>
+
+</div>
+<div class="ingr">
+    <img class="bild" src="https://imengine2.lrf.infomaker.io/?uuid=5618e14d-afb8-49ff-b0a7-601b90293fbc&type=preview&source=&function=cropresize&width=630&height=434&q=80&x=3&y=0&crop_w=1679&crop_h=1200&z=2&name=pannkakor-jpg" alt="">
+    <div class="grid-item">2 1/2 dl vetemjöl </div>
+    <div class="grid-item">1/2 tsk salt</div>
+    <div class="grid-item">6 dl mjölk</div>  
+    <div class="grid-item">3 ägg</div>
+    <div class="grid-item">smör (till stekning)</div>
+</div>
+
+<div class="recept">
+    <h2>Gör Så Här:</h2>
+<div class="tillagning">
+<div class="grid-tem">Blanda mjöl och salt i en bunke. Vispa i hälften av mjöken och vispa till en slät smet. Vispa i resten av mjölken och äggen. Låt smeten vila i ca 10 minuter.</div>
+<div class="grid-tem">Stek tunna pannkakor i lite smör, för varje pannkaka, i en stek- eller pannkakspanna.</div>
+<div class="grid-tem">Servera med sylt, bär, frukt eller andra tillbehör.</div>
+
+
+</div>
+
+
+
+
+
 </body>
 </html>
