--- a/ReceptSida/kladdkaka.html
+++ b/ReceptSida/kladdkaka.html
@@ -7,6 +7,42 @@
     <link rel="stylesheet" href="kladdkaka.css">
 </head>
 <body>
+   <div class="kl">
+<h1>Kladdkaka</h1>
+  </div>
+  <div>
+    <h2>Ingredienser</h2>
+  </div>
+
+  <div>
+<div class="i">
+<img class="bild" src="https://img.koket.se/standard-mega/godaste-och-harligaste-kladdkakan-pa-klassiskt-vis.png.jpg" alt="">
+<div class="gi">100g smör</div>
+<div class="gi">2 1/2 dl strösocker</div>
+<div class="gi">2 ägg</div>
+<div class="gi">1 dl vetemjöl</div>
+<div class="gi">3 msk kakao</div>
+<div class="gi"> 1 tsk vaniljsocker</div>
+</div>
+
+<div class="recept">
+<h2>Gör Så Här:</h2>
+<div class="gt">Sätt ugnen på 175 grader.</div>
+<div class="gt">Smält smöret i en kastrull. Lyft av kastrullen från plattan.</div>
+<div class="gt">Rör ner socker och ägg, blanda väl. Rör ner övriga ingredienser så att allt blir väl blandat.</div>
+<div class="gt">Häll smeten i en smord och bröad form med löstagbar kant, ca 24 cm i diameter.</div>
+<div class="gt">Grädda mitt i ugnen ca 15 min.</div>
+<div class="gt">Låt kakan kallna. Pudra över florsocker. Servera med grädde eller glass och frukt. </div>
+</div>
+
+
+
+ 
     
+
+
+
+
+
 </body>
 </html>
