--- a/ReceptSida/korvstrognf.html
+++ b/ReceptSida/korvstrognf.html
@@ -1,12 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="korvstrognf.css">
 </head>
+
 <body>
-    
+    <div class="ett">
+        <h1>Korvstroganoff</h1>
+    </div>
+    <div>
+        <h2>Ingredienser</h2>
+
+    </div>
+    <div class="ingr">
+        <img class="bild"
+            src="https://static.cdn-expressen.se/images/81/28/81280b6efbb0470c9385fab3a70a1c0d/4x3/1920@80.jpg" alt="">
+        <div class="grid-item">4 port ris </div>
+        <div class="grid-item">550g falukorv</div>
+        <div class="grid-item">1 gul lök</div>
+        <div class="grid-item">1 msk olja</div>
+        <div class="grid-item">3 msk tomatpuré</div>
+        <div class="grid-item">1 dl mjölk</div>
+        <div class="grid-item">1 msk japansk soja</div>
+        <div class="grid-item">1 tsk dijonsenap</div>
+        <div class="grid-item">peppar</div>
+        <div class="grid-item">salt</div>
+    </div>
+
+    <div class="recept">
+        <h2>Gör Så Här:</h2>
+        <div class="tillagning">
+            <div class="grid-tem">Koka riset enligt anvisningen på förpackningen.</div>
+            <div class="grid-tem">Skär korven i stavar. Skala och hacka löken.</div>
+            <div class="grid-tem">Stek korv och lök i oljan i en stekpanna ca 5 minuter. Tillsätt tomatpuré och fräs
+                någon minut.</div>
+            <div class="grid-tem">Rör ner grädde, mjölk, soja och dijonsenap. Låt sjuda ca 5 minuter.</div>
+            <div class="grid-tem">Smaka av med peppar och ev salt.</div>
+
+
+        </div>
+
+
+
 </body>
+
 </html>
