Allt länkat till en sida

--- a/Main/Spel/spel.html
+++ b/Main/Spel/spel.html
@@ -132,8 +132,8 @@ function accelerate(n) {
    
 </div> 
 <div class="bio">
-  <div class="grid-item"><button class="button" onclick="history.back()">Main</button></div>
-  <div class="grid-item"><button class="button"><a href="http://127.0.0.1:5500/Main/bio/bio.html">Spel</a></button></div>
+  <div class="grid-item"><button class="button"><a href="http://127.0.0.1:5500/Main/index.html">Main</a></button></div>
+  <div class="grid-item"><button class="button"><a href="http://127.0.0.1:5500/Main/bio/bio.html">Bio</a></button></div>
   <div class="grid-item">hej</div>
 </div>
 </body>
