--- a/Main/Blogg/blogg.html
+++ b/Main/Blogg/blogg.html
@@ -16,20 +16,21 @@
     <div class="vl">
         <hr>
     </div>
+    <div class="vll"><hr></div>
+    <div class="vlll"><hr></div>
     <div class="sidor">
-<a class="sida" href="" target="_parent" rel="noopener noreferrer">Sida</a>
-<a class="sida" href="" target="_parent" rel="noopener noreferrer">Sida</a>
-<a class="sida" href="" target="_parent" rel="noopener noreferrer">Sida</a>
-<a class="sida" href="" target="_parent" rel="noopener noreferrer">Sida</a>
+<a class="sida" href="blogg1.html" target="_parent" rel="noopener noreferrer">Kraften i Solitär: <br> Att Omfamna Tid <br> för Sig Själv</a>
+<p class="text">Det här är en blogg till ett skolarbete. Jag har använt ChatGPT till att göra två olika blogginlägg.</p>
+<a class="sida" href="blogg2.html" target="_parent" rel="noopener noreferrer">Konsten att Uppskatta <br> Små Glädjeämnen</a>
 
 
-    </div>
-<div class="text">
-    <p>test</p>
+
+   
 
 </div>
 
 <div class="circle"></div>
+
 
 
 
